--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: maneesh@sahu.haus
 description: > # this means to ignore newlines until "baseurl:"
   Blog of Sahu.Haus
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://blog.sahu.haus" # the base hostname & protocol for your site
+url: "http://blog.sahu.haus" # the base hostname & protocol for your site
 twitter_username: maneeshsahu
 github_username:  maneeshsahu
 
